# STRSTeamsCheckIn

./: .clang-format  .gitignore  CMakeLists.txt  Program.cs  README.md  STRSTeamsCheckIn.csproj  STRSTeamsCheckIn.sln  install.sh
.github/workflows/: dotnet.yml
include/: TeamsClient.h
include/curl_wrappers/: CurlHandle.h  CurlHeaders.h
install/: install.ps1  install.sh  uninstall.ps1  uninstall.sh
src/: TeamsClient.cpp  main.cpp
